--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>SUD 2020</title>
+<head>
 <style>
-body{
-	font-family:monospace;
-	color:navy;
-	padding:40px;
-}
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
+<body>
+
+<h1>cloud IOT</h1>
+<p>project number 2.</p>
+
+</body>
 </html>
+
+
